--- a/long_read_qc/04-ONT.Rmd
+++ b/long_read_qc/04-ONT.Rmd
@@ -33,7 +33,7 @@ https://github.com/nanoporetech/ont_fast5_api
 
 The MinION and GridION output a single sequencing summary file in addition to the Fast5 files. This file contains metdata which descirbes each sequenced read.
 
-We will not use Fast5 or summary files for this tutorial as they are not needed most of the time. It is likely these files will not be intially provided to you by a sequencing service as they are large and not often needed. However, if you do require them you can always ask but be careful with how long the sequencing centre will retain your data.
+We will not use Fast5 or summary files for this tutorial as they are not needed most of the time. It is likely these files will not be intially provided to you by a sequencing service as they are very large. However, if you do require them you can always ask but be careful with how long the sequencing centre will retain your data.
 
 ### BAM file
 ```{r, fig.align = 'center',out.width= '10%', echo=FALSE }
@@ -51,7 +51,7 @@ SAM stands for "Sequence Alignment/Map" (the B in BAM is Binary). SAM files are 
 
 It can be useful to contain unaligned reads from sequencing machines (e.g. PacBio and ONT) in BAM files as they can contain more metadata in the header and per-record auxiliary tags compared to fastq files. 
 
-If you are working with SMA/BAM files the following link will prove useful: 
+If you are working with SAM/BAM files the following link will prove useful: 
 https://www.htslib.org/
 
 For more information on the SAM and BAM format please see: 
@@ -90,9 +90,9 @@ __=<<<=>\@\@\@ACDCBCDAC\@BAA\@BA\@BBCBBDA\@BB\@>CD\@A\@B?B\@\@__
 knitr::include_graphics(path = "figures/guppy.png", auto_pdf = TRUE)
 ``` 
 
-In short, basecalling is the converting of ONT signals to bases and quality. In other word it is the conversion of Fast5 files to BAM and/or fastq files.
+In short, basecalling is the converting of ONT signals to bases and quality. This step converts the Fast5 files to BAM and/or fastq files.
 
-There are many tools to carry out basecalling with ONT data with ONT sequencing machines carrying this out themselves. However, if you are interested in the tools used for this the primary ones are Guppy and Albacore. Unfortunately it is quite hard to find information about these tools unless you own an ONT machine.
+There are many tools to carry out basecalling with ONT data. ONT sequencing machines carry this out with in built programs. However, if you are interested in the tools used for this the primary ones are Guppy and Albacore. Unfortunately it is quite hard to find information about these tools unless you own an ONT machine.
 
 Basecalling with Guppy tutorial:
 
@@ -109,7 +109,7 @@ knitr::include_graphics(path = "figures/qc_inspection.png", auto_pdf = TRUE)
 
 For this tutorial we will carry out quality control and checking on fastq files. Some QC steps can be carried out on summary files and/or BAM files. However we will be using fastq files for a variety of reasons:
 
-- fastq files are the smallest and so these processes will run quicker and the files will take up less storage. Ideal for a tutorial.
+- Fastq files are the smallest and so these processes will run quicker and the files will take up less storage. Ideal for a tutorial.
 - Fastq files are the easiest to work with.
 - You will most likely use fastq files in the future for ONT data. 
   - If you get your data sequenced by a genomic centre they will most likely give you your data in demultiplexxed (one fastq file per sample) fastq files.
@@ -121,7 +121,7 @@ Before carrying out any specific commands we will first move into the relevant d
 cd ~/QC_workshop/ONT_QC/
 ```
 
-Initialise environment. This needs to be done if you start working in a new terminal. Each terminal will only remember what you have told it.
+We need to initialise the environment to use the programs we need. This needs to be done in each terminal you want to run the below commands in. Each terminal will only remember what you have told that terminal.
 
 ```{bash eval=FALSE}
 . usenanopack-1.1.0
@@ -133,9 +133,9 @@ Look in the directory called data and you will notice there are a few directorie
 ls data/*
 ```
 
-You will notice that each directory has one fastq file. ONT data likes to be organised with data for one sample being in one directory. This is reflected in the software that we will use which likes to be pointed a directory with one sample in it.
+Each directory has one fastq file. ONT data likes to be organised with data for one sample being in one directory.
 
-To start with we will only use the fastq file within the directory called "Acinetobacter". As you may have figured out this contains ONT sequencing data of an Acinetobacter genome. Specifically the data is a subset of the SRA (Sequence Read Archive) Run: SRR7119550.
+To start with we will only use the fastq file within the directory called "Acinetobacter". As you may have figured out, this contains ONT sequencing data of an Acinetobacter genome. Specifically the data is a subset of the SRA (Sequence Read Archive) Run: SRR7119550.
 
 ### NanoStat
 ```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
@@ -144,7 +144,7 @@ knitr::include_graphics(path = "figures/metrics.png", auto_pdf = TRUE)
 
 The first step is to acquire stats for the sequences in our fastq file. We will use NanoStat (https://github.com/wdecoster/nanostat).
 
-NanoStat is one of the many tools contained in the NanoPack suite (https://github.com/wdecoster/nanopack). We will also use the tools NanoPlot and NanoFilt.
+NanoStat is one of the many tools contained in the NanoPack suite (https://github.com/wdecoster/nanopack). We will also use the tools NanoPlot and NanoFilt downstream.
 
 We want to have a tidy set of directories at the end of this analysis. It would be an untidy mess if we had all the output files in the current directory. We will therefore be making directories and subdirectories to send our output.
 
@@ -169,6 +169,8 @@ Now we can look at the output text file. In this case we will use the convenient
 less nanostats/Acinetobacter_nanostats.tsv
 ```
 
+#### NanoStat output format
+
 The file contains four sections with informative headers. These are:
 
 1. __General summary__
@@ -186,7 +188,7 @@ The file contains four sections with informative headers. These are:
 knitr::include_graphics(path = "figures/porechop_logo_knife.png", auto_pdf = TRUE)
 ``` 
 
-Porechop is a tool to find and remove adapters from ONT data (https://github.com/rrwick/Porechop). Adapters are artificial sequences essnetial for sequencing but of no biological value and so you will always want them removed.
+Porechop is a tool to find and remove adapters from ONT data (https://github.com/rrwick/Porechop). Adapters are artificial sequences essential for sequencing but of no biological value and so you will typically want them removed.
 
 Porechop is no longer supported but it still works and there is no alternative for adapter removal. Depending on which basecaller was used on your data, adapter removal may have already been carried out. However, it is always best to run porechop if you are not sure. 
 
@@ -199,7 +201,7 @@ Porechop has a list of known adapters it will look for and remove. These contain
 - Native barcoding
 - Rapid barcoding
 
-Porechop will look for these adapters at the start and end of each read. Then it will look for adapters within the sequence (known as middle adapters to Porechop). If it finds a middle adapter it will conclude the read is chimeric (a recombinant read containing sequence from 2 or more reads) and split the read. Depending on the number of middle adpaters the chimeric read may split into 2 or more reads.
+Porechop will look for these adapters at the start and end of each read. Then it will look for adapters within the sequence (known as middle adapters to Porechop). If it finds a middle adapter it will conclude that the read is chimeric (a recombinant read containing sequence from 2 or more reads) and split the read. Depending on the number of middle adpaters the chimeric read may split into 2 or more reads.
 
 With all that explanation we will now run Porechop. Thankfully the command is relatively straight forward with the options:
 
@@ -215,13 +217,13 @@ porechop -t 4 -i ./data/Acinetobacter/Acinetobacter_genome_ONT.fastq \
 -o porechop/Acinetobacter.porechop.fastq
 ```
 
-Porechop will take a while to run. Whilst it is running look at the screen output to get an idea of what it is doing. Once it is finished look at the bottom of the printed results.
+Porechop will take a while to run. Whilst it is running, look at the screen output to get an idea of what it is doing. When finished, look at the bottom of the printed results.
 
 Questions:
 
 - How many reads had adapters trimmed from their start?
 - How many bases were removed by adapters being trimmed from the end of reads?
-- How many read were split based on middle adpaters?
+- How many reads were split based on middle adpaters?
 
 For more uses of Porechop please see the below links:
 
@@ -237,7 +239,7 @@ NanoPlot can be thought of as the FastQC for ONT data. It produces a lot of usef
 
 ONT data has much lower quality scores than Illumina with Q10 being good. If you have enough coverage and length the low quality can be corrected by downstream processes not covered in this tutorial.
 
-Prior to running NanoPlot we will make a directory for the NanoPlot output. NanoPlot creates a lot of files so we'll make a subdirectory for the NanoPlot output of porechopped fastq files.
+Prior to running NanoPlot we will make a directory for the NanoPlot output. As NanoPlot creates a lot of files, we'll make a subdirectory for the NanoPlot output for the porechopped data.
 
 ```{bash eval=FALSE}
 mkdir nanoplot
@@ -250,7 +252,7 @@ Now to run NanoPlot. The options we will use are:
 - `--fastq`: Specifies the input path which is a fastq file.
 - `-o`: Directory where the output will be created.
 - `-p`: Prefix of output files. It is useful to have "_" at the end of the prefix.
-- `--plots`: Specifies what type of bivariate plot is to be created (more on this later). I find "hex" to be the best. 
+- `--plots`: Specifies what type of bivariate plot is to be created (more on this later). I find `hex` to be the best. 
 
 ```{bash eval=FALSE}
 NanoPlot -t 4 \
@@ -259,7 +261,7 @@ NanoPlot -t 4 \
 --plots hex 
 ```
 
-You may get below warning. This is fine and can be ignored.
+You may get the below warning. This is fine and can be ignored.
 
 ```{bash, eval = FALSE}
 /pub37/matt/programs_chos_8/anaconda3/lib/python3.7/_collections_abc.py:702: MatplotlibDeprecationWarning: The global colormaps dictionary is no longer considered public API.
@@ -274,11 +276,13 @@ List the files in the output directory.
 ls nanoplot/porechop/
 ```
 
-You will notice there are quite a few files. These should all start with "Acinetobacter_" thanks to the `-p` option. To quickly check all the results we can open the produced html file with firefox.
+There are quite a few files. These should all start with "Acinetobacter_" thanks to the `-p` option. To quickly check all the results we can open the report html file with firefox.
 
 ```{bash eval=FALSE}
 firefox nanoplot/porechop/Acinetobacter_NanoPlot-report.html
 ```
+
+#### NanoPlot output format
 
 The first section contains NanoStat output. Quickly look over this and see how it compares to the NanoStat output of the pre-porechopped reads.
 
@@ -287,16 +291,20 @@ Tip: To open a new terminal, right click VNC background -> Applications -> Shell
 After the __Summary Statistics__ section there is a __Plots__ section. This contains the plots:
 
 - __Histogram of read lengths__
-   - Histogram of "Number of reads" (y) against "Read length" (x).
+   - Histogram of "Number of _reads_" (y) against "Read length" (x).
 - __Histogram of read lengths after log transformations__
-   - Histogram of "Number of reads" (y) against log transformed "Read length" (x).
+   - Histogram of "Number of _reads_" (y) against log transformed "Read length" (x).
 - __Weighted Histogram of read lengths__
-   - Histogram of "Number of bases" (y) against "Read length" (x).
+   - Histogram of "Number of _bases_" (y) against "Read length" (x).
 - __Weighted Histogram of read lengths after log transformation__
-   - Histogram of "Number of bases" (y) against log transformed "Read length" (x).
+   - Histogram of "Number of _bases_" (y) against log transformed "Read length" (x).
 - __Dynamic histogram of Read length__
    - An interactive Histogram of "Number of reads" (y) against "Read length" (x) produced by plotly (https://plotly.com/).
-   - You can zoom into areas by clicking and dragging. Makes boxes to zoom into a specific area. Click and drag left or right only to zoom into a specific part of the x axis. Click and drag up or down only to zoom into a specific part of the y axis. Click the home icon on the top right to reset the axes.
+   - You can zoom into areas by clicking and dragging. 
+      - Make boxes to zoom into a specific area. 
+      - Click and drag left or right only to zoom into a specific part of the x axis. 
+      - Click and drag up or down only to zoom into a specific part of the y axis. 
+      - Click the home icon on the top right to reset the axes.
 - __Yield by length__
    - Plot showing the "Cumulative yield for minimal length" (y) by "Read length" (x).
    - The cumulative yield is measured in Gigabases (billion bases).
@@ -324,16 +332,16 @@ knitr::include_graphics(path = "figures/quality_filtering.png", auto_pdf = TRUE)
 
 NanoFilt can be used to remove/filter reads by quality and/or read length (https://github.com/wdecoster/nanofilt). This is very useful as you will most likely want long and good quality reads for downstream processes, such as genome assemblies.
 
-It is always important to know what your data is and if your planned filtering and trimming is appropriate. For example you may be working with amplicon data where the read lengths will vary between 500bp and 750bp. In that case it is useful to set a min length of 500 and a maxlength of 750.
+It is always important to know what your data is and if your planned filtering and trimming is appropriate. For example, you may be working with amplicon data where the read lengths will vary between 500bp and 750bp. In that case it is useful to set a min length of 500 and a maxlength of 750.
 
-This data is from a genome so wanting long and high quality reads is appropriate. Overall quality looks good. The main exception is the amount of sequencing/coverage, this is because it is a subset of the whole data for workshop purposes. There are some shorter length and lower quality reads which we will remove.
+This data is from a genome so wanting long and high quality reads is appropriate. Overall quality looks good. The main exception is the low amount of sequencing/coverage. The low coverage is because it is a subset of the whole data for workshop purposes (the full dataset would take too long to run through). There are some shorter length and lower quality reads which we will remove.
 
 First we will create an output directory.
 ```{bash eval=FALSE}
 mkdir nanofilt
 ```
 
-We will filter out sequences that are shorter than 500bp (`-l 500bp`) and filter out sequences with a average read quality less than Q10 (`-q 10`. We have chosen these values as they are a good default for genomic data. Q10 appeared to be a good choice from NanoPlot as the vast majority of reads had a quality of >Q10.
+We will filter out sequences that are shorter than 500bp (`-l 500bp`) and filter out sequences with a average read quality less than Q10 (`-q 10`). We have chosen these values as they are a good default for genomic data. Q10 appeared to be a good choice from NanoPlot as the majority of reads had a quality of >Q10.
 
 ```{bash eval=FALSE}
 cat porechop/Acinetobacter.porechop.fastq | \
@@ -341,7 +349,7 @@ NanoFilt -l 500 -q 10 > \
 nanofilt/Acinetobacter.nanofiltq10minlen500.porechop.fastq
 ```
 
-Are the chosen options appropriate? Let us find out.
+Are the chosen options appropriate? Let's find out.
 
 ### Final check
 ```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
