--- a/long_read_qc/05-Practice.Rmd
+++ b/long_read_qc/05-Practice.Rmd
@@ -1,22 +1,24 @@
 # Practice
+```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
+knitr::include_graphics(path = "figures/weight.png", auto_pdf = TRUE)
+``` 
+
+This section contains information on more data that you can carry out QC (Quality control and checking) as self guided practice.
+
+## ONT data
 ```{r, fig.align = 'center',out.width= '60%', echo=FALSE }
 knitr::include_graphics(path = "figures/ONT_logo.png", auto_pdf = TRUE)
 ``` 
-
-This section contains information or more data that you can carry out QC (Quality control and checking) as self guided practice.
-
-## ONT data
-
 The extra data consists of 2 subsetted runs from Bio Project: PRJNA477342 (https://www.ncbi.nlm.nih.gov/bioproject/?term=prjna477342).
 
 The data sets are:
 
 + Flavobacterium
-   + Genomic data for a Flavobacterium isolate.
+   + Genomic data for a __Flavobacterium__ isolate.
    + Original data from: SRA run SRR7449788.
 + Pseudonocardia
-   + Genomic data for a Pseudonocardia isolate.
-   + Original data form: SRA run SRR7447112.
+   + Genomic data for a __Pseudonocardia__ isolate.
+   + Original data from: SRA run SRR7447112.
    
 Run through all the ONT QC steps for these two datasets. Use all the same parameters and options, making sure to change input and output file paths and prefixes where appropriate.
 
@@ -25,9 +27,17 @@ __Tips__:
 + If you are editing commands you previously ran it is best to change the outputs first so you don't accidentally overwrite previous results.
 + You can run the command `firefox nanoplot/*/*NanoPlot*html`. This will open all the NanoPlot report htmls in one firefox window. There will be a separate tab for each report.
 
-Questions:
+__Questions__:
 
 1. Which of the three datasets (Acinetobacter, Flavobacterium, and Pseudocardia) has the highest initial (pre porechopping) mean read quality (this may be more than one)?
 2. Which of the three datasets has the highest initial mean read length?
 3. Which of the three datasets has the longest read in the initial data? How long is the read and what is it mean basecall quality score?
 4. Answer questions 1-3 for the porechopped data. Are the results of NanoStats significantly changed for any of the samples?
+5. Look at the NanoPlot results for the porechopped and NanoFiltered data using `-l 500` and `-q 10`.
+   + How many bases and reads are removed from the samples due to NanoFilt? 
+   + Are the parameters too stringent for some of the samples (losing too much data)?
+   + Try out some different parameters until you are happy with the results.
+   
+Ultimately, knowing what is good and poor data takes experience and practice. The `-l 500` and `-q10` is a good default for ONT genomic data and may be good for other uses. As with all defaults you may need to change these for your particular data.
+
+Hopefully that has been good practice and you are ready to QC your own data.
